# research-team

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_roles_agents_memory_artifacts.py  0003_sources_corpus_bibliography.py
backend/app/: config.py  db.py  deps.py  initial_roles.py  main.py  pricing.py
backend/app/models/: __init__.py  agent.py  artifact.py  bibliography.py  corpus.py  memory.py  role.py  source.py  subject.py  user.py
backend/app/routes/: agents.py  artifacts.py  auth.py  execution.py  library.py  roles.py  standup.py  subjects.py
backend/app/schemas/: agent.py  artifact.py  auth.py  bibliography.py  corpus.py  execution.py  role.py  source.py  subject.py
backend/app/services/: agents.py  artifacts.py  auth.py  bibliography.py  corpus.py  execution.py  ingestion.py  librarian.py  memory.py  openrouter.py  roles.py  scheduler.py  sources.py  standup.py  subjects.py  users.py
backend/tests/: conftest.py  test_agent_routes.py  test_agents_service.py  test_artifacts_service.py  test_auth_routes.py  test_auth_service.py  test_execution_service.py  test_health.py  test_ingestion.py  test_librarian.py  test_library_routes.py  test_memory_service.py  test_openrouter_client.py  test_scheduler.py  test_standup_route.py  test_standup_service.py  test_subject_routes.py  test_subjects_service.py  test_users_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
(+24 files in other folders)
